<resources>
    <string name="app_name">NeverLate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="menu_history">History</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Profile</string>dd
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="default_web_client_id">196033837175-9bc1n2p6kb8bkagi1fpb0svuqn6vltcn.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="title">Welcome to NeverLate</string>
    <string name="subtitle">Stay Punctual, Never Late!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_friends">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_title">Are you enjoying our app?</string>
    <string name="save">Save</string>
    <string name="add_friends_search_bar_text">Search Friend By Email</string>
    <string name="send_request">Send Request</string>
    <string-array name="EventType">
        <item>Dining</item>
        <item>Study</item>
        <item>Meeting</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>
    <string name="search">search</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="about_me">About Me</string>
    <string name="hurry_up">Hurry Up!</string>
    <string name="status_1">No need to start getting ready to leave yet</string>
    <string name="status_2">It is time to start getting ready to leave</string>
    <string name="status_3">Leaving now would be just right</string>
    <string name="status_4">Hurry up and leave, or you will be late!</string>
    <string name="status_5">You are definitely going to be late</string>
    <string name="status_6">You are already late! Hurry out now</string>
    <string name="status_7">You, with no sense of time, are hopeless</string>
    <string name="preStatus_1">Arrived Super Early</string>
    <string name="preStatus_2">Arrived Early</string>
    <string name="preStatus_3">Arrived On Time</string>
    <string name="preStatus_4">Slightly Late</string>
    <string name="preStatus_5">Late</string>
    <string name="preStatus_6">Super Late</string>
    <string name="badge_1">LATE GIIOTING</string>
    <string name="badge_2">LATE GENERAL</string>
    <string name="badge_3">LATE DUDKEL</string>
    <string name="badge_4">LATE SOILDIER</string>
    <string name="badge_5">LATE SOILDIER</string>
    <string name="badge_6">ON-TIME JANTHNE</string>
    <string name="badge_7">ON-TIME ERRCIRL</string>
    <string name="badge_8">ON-TIME PANDA</string>
    <string name="badge_9">ON-TIME JANITTA</string>
    <string name="badge_10">ON-TIME MAMORN</string>
    <string name="badge_1s">be LATE for an average of > 30 mins to earn this</string>
    <string name="badge_2s">be LATE for an average of 20 -30 mins to earn this</string>
    <string name="badge_3s">be LATE for an average of 15 - 20 mins to earn this</string>
    <string name="badge_4s">be LATE for an average of 5 - 15 mins to earn this</string>
    <string name="badge_5s">be LATE for an average of 0 - 5 mins to earn this</string>
    <string name="badge_6s">be Punctual for an average of 0 - 5 mins earlier to earn this</string>
    <string name="badge_7s">be Punctual for an average of 5 - 15 mins earlier to earn this</string>
    <string name="badge_8s">be Punctual for an average of 15 - 20 mins earlier to earn this</string>
    <string name="badge_9s">be Punctual for an average of 20 - 30 mins earlier to earn this</string>
    <string name="badge_10s">be Punctual for an average of > 30 mins earlier to earn this</string>
    <string name="ETT_title">Slide Bar Test</string>
    <string name="attendees">ATTENDEES</string>
    <string name="nav_menu_title_home">Home</string>
    <string name="nav_menu_title_app">App</string>
    <string name="start_date">START DATE</string>
    <string name="start_time">START TIME</string>
    <string name="duration_minutes">DURATION (minutes)</string>
    <string name="address_1">ADDRESS</string>
    <string name="click_me_to_select_an_address">Click me to select an address</string>
    <string name="event_type">EVENT TYPE</string>
    <string name="add_event">ADD EVENT</string>
    <string name="change_picture">Change Picture</string>
    <string name="all">All</string>
    <string name="dining">Dining</string>
    <string name="study">Study</string>
    <string name="meeting">Meeting</string>
    <string name="travel">Travel</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="add_event_1">Add Event</string>
    <string name="past_event">Past Event</string>
    <string name="group_project_meeting">Group Project Meeting</string>
    <string name="_4_people">4 people</string>
    <string name="drive">Drive</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="bus">Bus</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="status">Status:</string>
    <string name="remaining_time">Remaining time :</string>
    <string name="estimated_travel_time">Estimated travel time:</string>
    <string name="estimated_time_of_arrival">Estimated time of arrival:</string>
    <string name="i_ve_arrived">I\'ve arrived</string>
    <string name="see_event_on_map">see event on map</string>
    <string name="user_friend_count">User Friend Count</string>
    <string name="my_badges">My Badges</string>
    <string name="email">Email</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile_1">Edit Profile</string>
    <string name="push_notification">Push Notification</string>
    <string name="general">General</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select">Select</string>
    <string name="accept">ACCEPT</string>
    <string name="request">REQUEST</string>
    <string name="your_selection">YOUR SELECTION</string>
    <string name="confirm">Confirm</string>
    <string name="your_event_name">Your Event Name</string>
    <string name="write_a_short_description_for_the_event">Write A Short Description For The Event</string>
    <string name="add_new_event">Add New Event</string>

</resources>