<?xml version="1.0" encoding="utf-8"?>
<!--Reserved for future use-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Walk Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <!-- Bike Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <!-- Bus Option -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</LinearLayout>
