<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/friends_list_item_height">

    <ImageView
        android:id="@+id/profileIV"
        android:layout_width="@dimen/nav_header_image_size"
        android:layout_height="@dimen/nav_header_image_size"
        android:layout_margin="@dimen/general_small_margin"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/displayNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/displayNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_small_margin"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/memoTv"
        app:layout_constraintStart_toEndOf="@id/profileIV"
        app:layout_constraintTop_toTopOf="@id/profileIV"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/memoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_small_margin"
        app:layout_constraintBottom_toBottomOf="@id/profileIV"
        app:layout_constraintStart_toEndOf="@+id/profileIV"
        app:layout_constraintTop_toBottomOf="@id/displayNameTV"
        tools:text="@string/nav_header_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>