<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchEventsSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_small_margin"
        android:background="@drawable/rounded_btn"
        android:backgroundTint="@color/colorPrimaryDark"
        android:queryBackground="@color/colorPrimaryDark"
        android:textColorHint="@color/black"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search events by name" />

    <HorizontalScrollView
        android:id="@+id/category_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/searchEventsSV"
        tools:layout_editor_absoluteX="-86dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/filterAllBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_small_margin"
                android:layout_marginEnd="@dimen/general_small_margin"
                android:text="@string/all"
                android:textOff="@string/all"
                android:textOn="@string/all" />

            <ToggleButton
                android:id="@+id/filterDiningBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/general_small_margin"
                android:text="@string/dining"
                android:textOff="@string/dining"
                android:textOn="@string/dining" />

            <ToggleButton
                android:id="@+id/filterStudyBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/general_small_margin"
                android:text="@string/study"
                android:textOff="@string/study"
                android:textOn="@string/study" />

            <ToggleButton
                android:id="@+id/filterMeetingBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/general_small_margin"
                android:text="@string/meeting"
                android:textOff="@string/meeting"
                android:textOn="@string/meeting" />

            <ToggleButton
                android:id="@+id/filterTravelBtn"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/general_small_margin"
                android:text="@string/travel"
                android:textOff="@string/travel"
                android:textOn="@string/travel" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upcoming_seeall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/category_scroll">

        <TextView
            android:id="@+id/upcoming_event"
            style="@style/CustomTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/past_event"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsListRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upcoming_seeall" />

</androidx.constraintlayout.widget.ConstraintLayout>
