<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/friends_list_item_height">

    <ImageView
        android:id="@+id/profileIV"
        android:layout_width="@dimen/nav_header_image_size"
        android:layout_height="@dimen/nav_header_image_size"
        android:layout_margin="@dimen/general_small_margin"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/displayNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/displayNameTV"
        android:layout_width="@dimen/friend_text_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/general_small_margin"
        android:ellipsize="end"
        android:lines="1"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/emailTv"
        app:layout_constraintStart_toEndOf="@id/profileIV"
        app:layout_constraintTop_toTopOf="@id/profileIV"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="@dimen/friend_text_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/general_small_margin"
        android:ellipsize="end"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@id/profileIV"
        app:layout_constraintStart_toEndOf="@+id/profileIV"
        app:layout_constraintTop_toBottomOf="@id/displayNameTV"
        tools:text="@string/nav_header_subtitle" />

    <ImageButton
        android:id="@+id/acceptReqBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/general_xsmall_margin"
        android:layout_marginStart="@dimen/general_small_margin"
        android:backgroundTint="@color/buttonBackground"
        android:src="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/declineReqBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/emailTv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/declineReqBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/general_xsmall_margin"
        android:layout_marginStart="@dimen/general_xsmall_margin"
        android:src="@drawable/baseline_clear_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/acceptReqBtn"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>