<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/profile_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/general_small_margin"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="Profile picture"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            tools:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_small_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_small_margin"
                tools:text="@string/nav_header_subtitle" />
            <EditText
                android:id="@+id/displayNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                tools:text="@string/nav_header_title" />
            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                tools:text="@string/nav_header_subtitle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profile_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/general_small_margin"
            android:src="@drawable/ic_util_edit_24"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_status"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@id/profile_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/profile_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textSize="@dimen/subtitle_text_size" />
        <EditText
            android:id="@+id/profile_statusET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:enabled="false"
            android:text="@string/lorem"
           />
    </LinearLayout>
<!--    <TextView-->
<!--        android:id="@+id/profile_badge"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="My Badges"-->
<!--        android:textSize="@dimen/subtitle_text_size"-->
<!--        app:layout_constraintTop_toBottomOf="@id/profile_about"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>